# stet

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
benchmarks/: run_benchmarks.py
docs/: index.md
docs/explanation/: how-once-works.md  performance.md  related-libraries.md
docs/how-to/: choose-a-backend.md  choose-key-parameters.md  decorate-a-function.md  handle-reruns.md  import-existing-results.md  inspect-and-reset-a-store.md  install.md  recover-from-a-crash.md  rerun-everything.md  specify-a-store.md  use-with-multiprocessing.md
docs/reference/: api.md
docs/tutorials/: getting-started.md
explanation/how-once-works/: index.html
explanation/performance/: index.html
explanation/related-libraries/: index.html
how-to/choose-a-backend/: index.html
how-to/choose-key-parameters/: index.html
how-to/decorate-a-function/: index.html
how-to/handle-reruns/: index.html
how-to/import-existing-results/: index.html
how-to/inspect-and-reset-a-store/: index.html
how-to/install/: index.html
how-to/recover-from-a-crash/: index.html
how-to/rerun-everything/: index.html
how-to/specify-a-store/: index.html
how-to/use-with-multiprocessing/: index.html
reference/api/: index.html
search/: search_index.json
src/stet/: __init__.py  _decorator.py  _utils.py
src/stet/backends/: __init__.py  _base.py  _csv.py  _json.py  _parquet.py  _sqlite.py
tests/: test_backends.py  test_decorator.py  test_utils.py
tutorials/getting-started/: index.html
