[project]
name = "stet"
version = "0.0.1"
description = "Persistent memoization by parameter identity for experiment scripts"
readme = "README.md"
authors = [
    { name = "Vince Knight", email = "vince@vknight.org" }
]
requires-python = ">=3.11"
dependencies = [
    "filelock>=3.25.1",
    "pandas>=3.0.1",
]

[project.optional-dependencies]
parquet = [
    "pyarrow>=23.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.7.4,<10.0",
    "mkdocstrings[python]>=1.0.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short --cov=stet --cov-fail-under=100 --cov-report=term-missing"
